fix images path, wrap page logo in <a> tag

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -20,7 +20,7 @@ header {
       position: relative;
       width: 111px;
       height: 74px;
-      background: url('/images/deco/mobile/nav-logo.svg');
+      background: url('images/deco/mobile/nav-logo.svg');
       z-index: 1;
     }
 
@@ -86,8 +86,7 @@ header {
     margin: 15px 0;
     width: 100%;
     height: 53.333vw;
-    background:
-      url('/images/deco/mobile/image_geometry-headline-mobile.svg')
+    background: url('images/deco/mobile/image_geometry-headline-mobile.svg')
       no-repeat;
     background-size: contain;
   }
